[package]
name = "synthmerge"
version = "0.1.11"
edition = "2024"
description = "AI-powered git mergetool that resolves conflicts using LLMs"
readme = "README.md"
repository = "https://gitlab.com/aarcange/synthmerge"
license = "GPL-3.0-or-later OR AGPL-3.0-or-later"
keywords = ["ai", "git", "mergetool", "conflict-resolution", "llm", "code-merge", "cherry-pick", "patch", "diff3", "ai-assisted-development"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1.0"
anyhow = "1.0"
serde_json = "1.0"
imara-diff = "0.2"
shellexpand = "3.1.0"
futures = "0.3"
env_logger = "0.11"
log = "0.4"
csv = "1.4"
